fix text align name

--- a/assets/style.css
+++ b/assets/style.css
@@ -20,6 +20,9 @@ body {
   background-color: aliceblue;
 }
 
+.name {
+  text-align: center;
+}
 .link-container {
   display: flex;
   justify-content: center;
